--- a/store/templates/store/product_list.html
+++ b/store/templates/store/product_list.html
@@ -1,4 +1,13 @@
 {% extends 'base.html' %}
 {% block body %}
     <h1>Hi world</h1>
+    <ul>
+    {% for product in object_list %}
+       <li>
+       <h2>{{ product.name }}</h2>
+       <h4>{{ product.description }}</h4>
+       <h4>{{ product.price }}</h4>
+       </li>
+    {% endfor %}
+    </ul>
 {% endblock %}
