Added displaying of category tree via recursive mptt

--- a/store/templates/store/categories_sidebar.html
+++ b/store/templates/store/categories_sidebar.html
@@ -1,6 +1,15 @@
-
+{% load mptt_tags %}
 {% block categories_sidebar %}
-    <ul>
-    </ul>
+    {% recursetree categories %}
+        <li>
+            {{ node.name }}
+            {% if not node.is_leaf_node %}
+                <ul class="children">
+                    {{ children }}
+                </ul>
+            {% endif %}
+        </li>
+    {% endrecursetree %}
+
 
 {% endblock %}
