Created model Book as One-to-One relation with Product

--- a/store/templates/store/product_list.html
+++ b/store/templates/store/product_list.html
@@ -4,8 +4,8 @@
     <ul>
     {% for product in object_list %}
        <li>
-       <h2>{{ product.name }}</h2>
-       <h4>{{ product.description }}</h4>
+       <h2>{{ product.book.name }}</h2>
+       <h4>{{ product.book.description }}</h4>
        <h4>{{ product.price }}</h4>
        </li>
     {% endfor %}
